SW-7868 - Fixed: Spacing of alert boxes

--- a/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/checkout.less
+++ b/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/checkout.less
@@ -1,3 +1,9 @@
+.is--ctl-checkout {
+    .panel--body > .alert {
+        .unitize-margin(50, 0);
+    }
+}
+
 .content--basket {
 	.alert {
 		.unitize-margin(15, 0);
